# ChangeLog for app-admin/metalog
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/metalog/ChangeLog,v 1.12 2003/03/21 17:29:54 gmsoft Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*metalog-0.6-r10 (15 Jul 2002)

  21 Mar 2003; Guy Martin <gmsoft@gentoo.org> :
  Added hppa to KEYWORDS.

  14 Mar 2003; Jan Seidel <tuxus@gentoo.org> :
  Added mips to KEYWORDS

  10 Dec 2002; Will Woods <wwoods@gentoo.org> : 
  Added alpha to KEYWORDS.

  12 Oct 2002; Donny Davies <woodchip@gentoo.org> :
  Small fix for #8885.

  26 Jul 2002; Calum Selkirk <cselkirk@gentoo.org metalog-0.6-r10.ebuild :
  Added ppc to KEYWORDS. Added RDEPEND

  15 Jul 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
  Hack man page to point to /etc/metalog/metalog.conf

  24 Apr 2002; Thilo Bangert <bangert@gentoo.org> files/metalog.conf :
  initial release - added examples on how to use the consolelog.sh script from LFS  

  24 Apr 2002; Thilo Bangert <bangert@gentoo.org> files/consolelog.sh :
  initial release

  24 Apr 2002; Thilo Bangert <bangert@gentoo.org> matalog-0.6-r9.ebuild :  
  added consolelog.sh - script to be able to log to a console - from LFS
  
*metalog-0.6-r9 (11 March 2002)

  11 March 2002; M.Schlemmer <azarah@gentoo.org> :
  Update rc-script to provide "logger".

*metalog-0.6-r8 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.