@@ -1,8 +1,10 @@
-MD5 c18c6d6d010e571c4cedcc98ce3821ff ChangeLog 1852
+MD5 fe62777520eac993138b9c412a85796e ChangeLog 2137
 MD5 376e485097679cfce79bf133c482f52a metalog-0.6-r10.ebuild 1305
+MD5 ca40b597048453a30af6a32e3875b7fb metalog-0.7.ebuild 1362
 MD5 2a4834a861e0ed954124316c2a0ad8e9 files/consolelog.sh 191
 MD5 a25ad551b1c77f423d1de78425f1b0ad files/digest-metalog-0.6-r10 63
 MD5 3e19c05da6bed4a092412095406b0bda files/metalog-0.6-gentoo.patch 3252
 MD5 190c71684001202740eb31821945595c files/metalog.conf 1714
-MD5 05814c078ee37f035784cea00d3172cc files/metalog.confd 348
+MD5 83efa326f58d568d66a3506852aa9528 files/metalog.confd 512
 MD5 5dbc35025f97a8cc6b9a9b1d5137c371 files/metalog.rc6 668
+MD5 ab769042aa4721d0ac745943e00c70e4 files/digest-metalog-0.7 63
