@@ -1,8 +1,13 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/metalog/files/metalog.confd,v 1.3 2003/02/14 22:08:06 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/metalog/files/metalog.confd,v 1.4 2003/06/13 00:22:10 pebenito Exp $
 
 # Config file for /etc/init.d/metalog
 
+# If you are using metalog 0.6, buffering is on by default.
 # Add '-s' if you dont want buffering.  (See things realtime)
+
+# If you are using metalog 0.7+, buffering is now off by default.
+# Add '-a' if you want buffering.
+
 METALOG_OPTS="-B"
